# opengl-tutorial

./: CMakeLists.txt  Makefile  README.md  credits.txt
resources/shaders/: core.frag  core.vert
src/: Camera.h  Main.cpp  Shader.h
